2009-09-25  Ivan Maidanski <ivmai@mail.ru> (really mostly Petter Urkedal)

	* configure.ac: Add documentation to AC_DEFINE for GC_THREADS and
	EMPTY_GETENV_RESULTS.
	* configure.ac: Fix a typo.
	* Makefile.am: Ditto.

2009-09-25  Ivan Maidanski <ivmai@mail.ru>

	* checksums.c (GC_checksum, GC_update_check_page): Remove
	"register" keyword in local variable declarations (for the code
	used only for debugging or which is not time-critical).
	* dbg_mlc.c (GC_has_other_debug_info, GC_store_debug_info,
	GC_store_debug_info_inner, GC_check_annotated_obj, GC_print_obj,
	GC_print_smashed_obj, GC_debug_end_stubborn_change,
	GC_debug_invoke_finalizer): Ditto.
	* dyn_load.c (GC_register_dynamic_libraries): Ditto.
	* mallocx.c (GC_realloc): Ditto.
	* mark_rts.c (GC_print_static_roots, GC_is_static_root,
	GC_clear_roots): Ditto.
	* misc.c (GC_write): Ditto.
	* os_dep.c (GC_print_callers): Ditto.
	* dyn_load.c (GC_register_dynamic_libraries): Rename "i" local
	variable to "j" for the nested loop (just not to hide the similar
	variable in the outer one).
	* mark_rts.c (GC_print_static_roots): Output an error message
	using GC_err_printf() (instead of GC_printf()).

2009-09-25  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Move include flag from ${INCLUDE} ...
	* Makefile.am: ... to AM_CPPFLAGS and also add the build directory.
	* configure.ac: Call AM_CONFIG_HEADER([include/private/config.h]).
	* configure.ac: Add documentation to all AC_DEFINE either directly
	or using AH_TEMPLATE.

2009-09-24  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (GC_waitForSingleObjectInfinite): New static
	function (only if GC_WINMAIN_REDIRECT).
	* win32_threads.c (WinMain): Call GC_waitForSingleObjectInfinite()
	thru GC_do_blocking() instead of calling WaitForSingleObject()
	directly.

2009-09-24  Ivan Maidanski <ivmai@mail.ru>

	* pthread_support.c (start_mark_threads): Refine printed message.
	* win32_threads.c (GC_thr_init): Ditto.